# DataSmith

./: .gitignore  package-lock.json  package.json
.github/workflows/: release.yml
plans/: sql-editor-context-menu.md
src/: components.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: metadata.rs  redis.rs
src-tauri/src/database/: manager.rs  mongodb.rs  mysql.rs  postgresql.rs  redis.rs  sqlite.rs  traits.rs
src-tauri/src/utils/: crypto.rs
src/components/connection/: ConnectionPanel.vue
src/components/data/: TableDataGrid.vue
src/components/database/: DatabaseTree.vue  RestoreDatabaseDialog.vue  TableDesigner.vue  TreeNodeItem.vue
src/components/editor/: RedisEditor.vue  RedisKeyViewer.vue  SqlEditor.vue
src/views/: HomeView.vue
