[package]
name = "datasmith"
version = "0.1.0"
description = "轻量级数据库管理工具"
authors = ["DataSmith Team"]
license = "MIT"
repository = ""
edition = "2021"

# 构建优化
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"  # 优化大小
strip = true

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.9.0", features = ["protocol-asset"] }
tauri-plugin-store = "2.4.1"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-fs = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
thiserror = "2.0.17"
async-trait = "0.1"

# 数据库驱动
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "mysql",
    "postgres",
    "sqlite",
    "any"
], optional = true }
mongodb = { version = "3.4.1", optional = true }
redis = { version = "1.0.2", features = ["tokio-comp"], optional = true }
futures = "0.3"

# 连接池
deadpool = { version = "0.10", optional = true }
deadpool-postgres = { version = "0.14", optional = true }

# 安全存储
keyring = "3.6.3"
aes-gcm = "0.10"
argon2 = "0.5"

# 数据处理
csv = "1.3"
calamine = { version = "0.24", features = ["dates"] }
rust_xlsxwriter = "0.64"

# SQL 解析
sqlparser = "0.43"

# 工具库
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
base64 = "0.22"
hostname = "0.4.2"
shell-words = "1.1"

[features]
default = ["mysql", "postgresql", "sqlite", "mongodb-support", "redis-support"]
mysql = ["sqlx"]
postgresql = ["sqlx", "deadpool-postgres"]
sqlite = ["sqlx"]
mongodb-support = ["mongodb"]
redis-support = ["redis"]
custom-protocol = ["tauri/custom-protocol"]

